--- a/index.html
+++ b/index.html
@@ -9,63 +9,117 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
       rel="stylesheet"
     />
+    <link rel=’stylesheet’
+    href=’https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css’>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="main.js" type="module"></script>
-    <title>Wordle</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
+
+    <script type="text/javascript">
+      let height = 420;
+      let width = 250;
+      let symbols = [];
+      let symbolSize = 10;
+      let timer = 0;
+      let streams = [];
+
+      class Symbol {
+        constructor(x, y, speed) {
+          this.x = x;
+          this.y = y;
+          this.speed = speed;
+
+          this.switchInterval = round(random(5, 20));
+          this.value;
+
+          this.setRandomSymbol = function () {
+            if (timer % this.switchInterval == 0) {
+              this.value = String.fromCharCode(0x10a0 + round(random(0, 96)));
+            }
+          };
+        }
+
+        rain() {
+          this.y = this.y >= height ? 0 : (this.y += this.speed);
+        }
+      }
+
+      class Stream {
+        constructor() {
+          this.stream = [];
+          this.streamLength = round(random(2, 5));
+          this.speed = random(5, 8);
+        }
+
+        generateSymbols(x, y) {
+          for (let i = 0; i <= this.streamLength; i++) {
+            let symbol = new Symbol(x, y, this.speed);
+            symbol.setRandomSymbol();
+            this.stream.push(symbol);
+            y -= symbolSize;
+          }
+        }
+
+        render(){
+          this.stream.forEach(symbol => {
+            fill('#00b894')
+            text(symbol.value, symbol.x, symbol.y)
+            symbol.setRandomSymbol()
+            symbol.rain()
+          })
+        }
+      }
+
+      function setup(){
+        let height = 420;
+        let width = 220;
+        let c = createCanvas(width, height)
+        c.parent('wrapper')
+        var x = 0
+
+        for(let i = 0; i <= width/symbolSize; i++){
+          let y = random(-300, 0)
+          let stream = new Stream()
+          stream.generateSymbols(x, y)
+          streams.push(stream)
+          x == symbolSize
+          x += symbolSize
+        }
+        textSize(symbolSize)
+      }
+
+      function draw(){
+        background('#2d343680')
+        streams.forEach(stream => {
+          stream.render()
+        })
+        timer++
+      }
+    </script>
+
+    <title>matrix rain</title>
   </head>
   <body>
-    <h1>Играем в Wordle</h1>
-    <div id="game-board"></div>
-    <!-- общий блок для всей клавиатуры -->
-<div id="keyboard-cont">
-  <!-- блок с первым рядом -->
-  <div class="first-row">
-      <!-- блоки с отдельными кнопками -->
-      <button class="keyboard-button">й</button>
-      <button class="keyboard-button">ц</button>
-      <button class="keyboard-button">у</button>
-      <button class="keyboard-button">к</button>
-      <button class="keyboard-button">е</button>
-      <button class="keyboard-button">н</button>
-      <button class="keyboard-button">г</button>
-      <button class="keyboard-button">ш</button>
-      <button class="keyboard-button">щ</button>
-      <button class="keyboard-button">з</button>
-      <button class="keyboard-button">х</button>
-      <button class="keyboard-button">ъ</button>
-  </div>
-  <div class="second-row">
-      <button class="keyboard-button">ф</button>
-      <button class="keyboard-button">ы</button>
-      <button class="keyboard-button">в</button>
-      <button class="keyboard-button">а</button>
-      <button class="keyboard-button">п</button>
-      <button class="keyboard-button">р</button>
-      <button class="keyboard-button">о</button>
-      <button class="keyboard-button">л</button>
-      <button class="keyboard-button">д</button>
-      <button class="keyboard-button">ж</button>
-      <button class="keyboard-button">э</button>
-  </div>
-  <div class="third-row">
-      <button class="keyboard-button">Backspace</button>
-      <button class="keyboard-button">я</button>
-      <button class="keyboard-button">ч</button>
-      <button class="keyboard-button">с</button>
-      <button class="keyboard-button">м</button>
-      <button class="keyboard-button">и</button>
-      <button class="keyboard-button">т</button>
-      <button class="keyboard-button">ь</button>
-      <button class="keyboard-button">б</button>
-      <button class="keyboard-button">ю</button>
-      <button class="keyboard-button">ё</button>
-      <button class="keyboard-button">Enter</button>
-  </div>
-</div>
+    <div id="wrapper">
+      <svg
+        class="cloud-svg"
+        x="0px"
+        y="0px"
+        viewBox="0 0 60 60"
+        style="enable-background: new 0 0 60 60"
+      >
+        <path
+          class="cloud"
+          d="M50.003,27 c-0.115-8.699-7.193-16-15.919-16c-5.559,0-10.779,3.005-13.661,7.336C19.157,17.493,17.636,17,16,17c-4.418,0-8,3.582-8,8 c0,0.153,0.014,0.302,0.023,0.454C8.013,25.636,8,25.82,8,26c-3.988,1.912-7,6.457-7,11.155C1,43.67,6.33,49,12.845,49h24.507 c0.138,0,0.272-0.016,0.408-0.021C37.897,48.984,38.031,49,38.169,49h9.803C54.037,49,59,44.037,59,37.972 C59,32.601,55.106,27.961,50.003,27z"
+        />
+        <!-- дополнительные штрихи на тучке для объёма -->
+        <path class="cloud" d="M50.003,27 c0,0-2.535-0.375-5.003,0" />
+        <path class="cloud" d="M8,25c0-4.418,3.582-8,8-8 s8,3.582,8,8" />
+      </svg>
+    </div>
   </body>
 </html>
